--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+.game-container {
+    display: grid;
+    grid-column: auto;
+    justify-items: center;
+
+}
+
+.game-info {
+    font-size: 24px;
+    padding: 20px;
+}
+
 .grid {
     margin: 50px auto;
     display: grid;
@@ -6,6 +18,30 @@
     justify-content: center;
 }
 
-.hide{
-    display: none;
+.card {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    transform-style: preserve-3d;
+    display: block;
+    transition: transform 0.8s ease-in-out;
+}
+
+.card img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card .averse {
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+}
+
+.grid.show .card, 
+.card.show {
+    transform: rotateY(180deg);
 }
