Add basic styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,43 @@
-.game-container {
+body {
+    height: 100vh;
+    background: radial-gradient(#ade0f5, #8ec8df, #71a8be, #4f7483, #1b2d35);
+}
+
+.game-container, 
+.game-info-container,
+.rules-container {
     display: grid;
     grid-column: auto;
     justify-items: center;
-
 }
 
-.game-info {
+.none {
+    display: none;
+}
+
+.button {
+    display: block;
+    width: 9em;
+    height: 2em;
+    border-radius: 1em;
+    box-shadow: 2px 2px 2px rgb(0 0 0 / 25%);
+    background-image: linear-gradient(to right,#ffb6bb, #ffe691);
+    line-height: 2;
+    text-align: center;
+    margin: 5px;
+}
+
+.game-stats {
     font-size: 24px;
-    padding: 20px;
+    padding: 5px;
+}
+
+.main-pic-container {
+    background: url("../images/loading.gif");
+}
+
+.main-pic.visibility {
+    opacity: 0.5;
 }
 
 .grid {
