--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,7 @@ body * {
 .main-pic-container {
     background: url("../images/loading.gif");
     background-size: cover;
+    min-height: 100px;
 }
 
 .main-pic {
