--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,42 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600&display=swap');
 
 :root {
     /* Page Pallete */
-    --mainColor: #8ec8df;
-    --darkMainColor: #6199af;
+    --mainColor: #6199af;
     --whiteColor: #ffffff;
-    --darkColor: #2a2f33;
-    /* Fonts */
-    --textFont: 'Mochiy Pop P One', sans-serif;
-    --buttonFont: 'Montserrat', sans-serif;
+    /* Layout */
+    --footerHeight: 50px;
+    --gameWidth: 340px;
+
 }
 
 body {
-    height: 100vh;
+    position: relative;
+    min-height: 100vh;
     background-color: var(--mainColor);
-    font-family: var(--textFont);
+    font-family: 'Montserrat', sans-serif;;
     color: var(--darkColor);
-    margin: 0;
+    padding-bottom: var(--footerHeight);
 }
 
+body,
 body * {
     box-sizing: border-box;
-}
-
-.page-content {
-    min-height: calc(100vh - 70px);
-    max-width: 340px;
-    margin: 0 auto;
-    position: relative;
+    margin: 0;
 }
 
 .page {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: var(--gameWidth);
+    height: calc(100% - var(--footerHeight));
     opacity: 0;
     filter: blur(10px);
     transition: all 0.3s ease-in-out;
@@ -50,6 +45,24 @@ body * {
     pointer-events: initial;
 }
 
+.menu-view .logo {
+    flex: 0 1 200px;
+    overflow: hidden;
+    min-height: 80px;
+}
+
+.menu-view .logo img {
+    display: block;
+    width: auto;
+    height: auto;
+    max-height: 100%;
+}
+
+.menu-view .separator {
+    flex: 0 2 10%;
+    width: 100%;
+}
+
 .page.menu-view {
     display: flex;
     flex-direction: column;
@@ -57,16 +70,9 @@ body * {
     align-items: center;
 }
 
-.menu-view h1 {
-    margin: 0 0 3em;
-}
-
 .menu-view .button {
-    margin: 25px 0;
-}
-
-.page.menu-view *:last-child {
-    margin-bottom: 10vh;
+    margin: 15px 0;
+    flex: 0 0 55px;
 }
 
 .game-stats-container {
@@ -91,13 +97,17 @@ body * {
 }
 
 .footer {
-    height: 50px;
-    width: 50%;
+    height: var(--footerHeight);
+    max-width: var(--gameWidth);
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin: auto;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .footer i {
@@ -114,27 +124,26 @@ body * {
     border-radius: 1em;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     background: var(--whiteColor);
-    color: var(--darkMainColor);
+    color: var(--mainColor);
     text-align: center;
     margin: 5px;
-    font-family: var(--buttonFont);
     font-size: 32px;
     letter-spacing: 1px;
 }
 
-.go-btn {
-    width: 260px;
+.modal .button {
     background: var(--mainColor);
-    color: var(--darkColor);
-    margin: 10px 20px;
-
+    color: var(--whiteColor);
+    margin: 25px 20px 0;
+    height: 40px;
+    font-size: 18px;
 }
 
 /* Modal styling */
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     padding: 20px;
     left: 0;
     top: 0;
@@ -150,7 +159,6 @@ body * {
     background-color: var(--whiteColor);
     padding: 20px;
     border: 1px solid #888;
-    /* color: #1b2d35; */
 }
 
 .modal-text-content {
@@ -197,7 +205,6 @@ body * {
     display: grid;
     grid-template-columns: repeat(3, auto);
     grid-gap: 5px;
-    justify-content: center;
 }
 
 .card {
