--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,13 @@ body * {
 }
 
 /* Home/Menu page styling */
+.page.menu-view {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .menu-view .logo {
     flex: 0 1 200px;
     overflow: hidden;
@@ -66,11 +73,15 @@ body * {
     width: 100%;
 }
 
-.page.menu-view {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.name-input {
+    border: 0;
+    border-radius: 2em;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding: 5px;
+    height: 40px;
+    width: 180px;
+    text-align: center;
+    font-size: 18px;
 }
 
 .button {
