--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,8 +171,14 @@ body * {
 }
 
 .card .card-front {
-    transform: rotateY(180deg);
-    backface-visibility: hidden;
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+}
+
+.card .card-back {
+    transform: translateZ(1px);
 }
 
 .grid.show .card, 
