--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,11 @@ body * {
 }
 
 /* Game page styling */
+.game-header {
+    font-size: 18px;
+    color: var(--whiteColor);
+}
+
 .game-stats-container {
     display: flex;
     justify-content: space-between;
@@ -339,6 +344,10 @@ img.main-pic {
 
 /* Resposive desgin */
 @media only screen and (min-height: 960px) {
+    .game-header {
+        font-size: 24px;
+    }
+
     .main-pic {
         width: 150px;
         height: 150px;
@@ -359,6 +368,10 @@ img.main-pic {
 }
 
 @media only screen and (max-height: 580px) {
+    .game-header {
+        font-size: 14px;
+    }
+
     .main-pic {
         width: 80px;
         height: 80px;
