--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,12 @@ img.main-pic {
     margin: 5px;
 }
 
+#modal-game-over .modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .modal h2 {
     margin: 10px 0;
 }
