Change the way of import font to increase Lighthouse performence

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Montserrat:wght@500&display=swap');
-
+/* CSS root variables */
 :root {
     /* Page Pallete */
     --mainColor: #6199af;
